# fleetform

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.cli  Dockerfile.ui  README.md  build.rs  docker-compose.yml  fleetform.hcl  fleetform_plan.json  main.tf  test.tf
.cargo/: config.toml
.github/: pull_request_template.md
.github/workflows/: checks.yml  release.yml
examples/: main.tf
fiber/: .dockerignore  Dockerfile  go.mod  main.go
fiber/handlers/: config.go  diff.go  modules.go  realtime.go  state.go  ui.go
fiber/static/: index.html
modules/aws-ec2/: main.tf
modules/aws-vpc/: main.tf
proto/: tfplugin6.proto
scripts/: docker-dev.bat  docker-dev.sh
src/: config.rs  dag.rs  ffi.rs  hcl.rs  main.rs  modules.rs  proto.rs  provider.rs  provisioner.rs  provisioner.rs.new  registry.rs  state.rs  terminal.rs  workspace.rs
src/commands/: apply.rs  config.rs  consul.rs  consul_test.rs  destroy.rs  fmt.rs  hcl_validate.rs  init.rs  mod.rs  module.rs  plan.rs  providers.rs  provision.rs  show.rs  state_mv.rs  test.rs  validate.rs  workspace.rs  workspace_cmd.rs  workspace_test.rs
src/modules/: init.rs  update.rs
src/tofu/: plugin.rs
src/tofu/plugin/: mod.rs
