[package]
name = "fleetform"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust-based OpenTofu provider implementation"
license = "MIT"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full", "macros"] }
tonic = { version = "0.10", features = ["transport", "codegen"] }
prost = "0.12"
hcl-rs = "0.16"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
petgraph = "0.6"
aws-sdk-s3 = "1.0"
aws-sdk-ec2 = "1.0"
aws-config = "1.0"
fs4 = "0.7"
uuid = { version = "1.0", features = ["v4"] }
futures-util = "0.3"
shellwords = "1.1"

[build-dependencies]
tonic-build = { version = "0.10", features = ["prost"] }
prost-build = "0.12"

[profile.dev]
opt-level = 1  # Better compile times, still good for debugging
codegen-units = 16  # More parallel code generation
incremental = true

[profile.dev.package."*"]
opt-level = 1  # Optimize all dependencies